# pyghey

./: CONTRIBUTING.md  README.md  package.json  pyproject.toml  sample_log.py  setup.py
pyghey/: individuals.py  log.py  shapes.py
pyghey/ai/: training.py
tests/: test_dataset.py  test_loading_pretrained.py  test_pretrained.py
