[tool.poetry]
name = "pyghey"
version = "0.1.0"
description = "Logging while training model sucks. I need to make one."
authors = ["Zai <130903099+zaibutcooler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
